Added MonteCarolForwardSolverTests, removed Vts.Database.dll from Vts.Desktop references, and added the following to the output.xml of the reference MC data:
+    <Options>
+      <AbsorptionWeightingType>Discrete</AbsorptionWeightingType>
+      <RandomNumberGeneratorType>MersenneTwister</RandomNumberGeneratorType>
+      <Seed>452</Seed>
+      <SimulationIndex>0</SimulationIndex>
+      <WriteHistories>false</WriteHistories>
+    </Options>

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -158,6 +158,9 @@
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs">
       <Link>Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs</Link>
     </Compile>
+    <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\MonteCarloForwardSolverTests.cs">
+      <Link>Modeling\ForwardSolvers\MonteCarloForwardSolverTests.cs</Link>
+    </Compile>
     <Compile Include="..\Vts.Test\Modeling\ForwardSolvers\NurbsForwardSolverTest.cs">
       <Link>Modeling\ForwardSolvers\NurbsForwardSolverTest.cs</Link>
     </Compile>
