--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -158,6 +158,7 @@
     <Compile Include="Factories\ComputationFactoryTest.cs" />
     <Compile Include="Factories\SolverFactoryTest.cs" />
     <Compile Include="Modeling\ForwardSolvers\BSplinesCoefficientsTest.cs" />
+    <Compile Include="Modeling\ForwardSolvers\MonteCarloForwardSolverTests.cs" />
     <Compile Include="Modeling\ForwardSolvers\DiffusionGreensFunctionsTest.cs" />
     <Compile Include="Modeling\ForwardSolvers\pMCForwardSolverTests.cs" />
     <Compile Include="Modeling\LoadValidationData.cs" />
