--- a/src/Vts.Web/Vts.Web.csproj
+++ b/src/Vts.Web/Vts.Web.csproj
@@ -51,10 +51,10 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ClientAccessPolicy.xml" />
     <Content Include="ClientBin\Vts.SiteVisit.xap" />
+    <Content Include="Libraries\ClientAccessPolicy.xml" />
+    <Content Include="Libraries\Vts.Database.dll" />
     <Content Include="Silverlight.js" />
-    <Content Include="Vts.Database.dll" />
     <Content Include="Vts.SiteVisitTestPage.aspx" />
     <Content Include="Vts.SiteVisitTestPage.html" />
     <Content Include="Web.config" />
