--- a/src/Vts.SiteVisit/Vts.SiteVisit.csproj
+++ b/src/Vts.SiteVisit/Vts.SiteVisit.csproj
@@ -168,6 +168,9 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Include="ViewModel\Application\Panels\MultiLayerTissueViewModel.cs" />
+    <Compile Include="ViewModel\Application\Panels\LayerRegionViewModel.cs" />
+    <Compile Include="ViewModel\Application\Panels\SimulationInputViewModel.cs" />
     <Compile Include="ViewModel\Application\Panels\SubPanels\BloodConcentrationViewModel.cs" />
     <Compile Include="Converters\DoubleToStringConverter.cs" />
     <Compile Include="ViewModel\Application\Panels\SubPanels\FluenceSolutionDomainOptionViewModel.cs" />
@@ -429,10 +432,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Vts.Database\Vts.Database.csproj">
-      <Project>{79A38678-1464-4E60-94AA-82B47DFDB334}</Project>
-      <Name>Vts.Database</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Vts\Vts.csproj">
       <Project>{92381E9C-57F9-4391-A3C6-A5FAA99E823B}</Project>
       <Name>Vts</Name>
