Moved ClientAccessPolicy.xml to the root of the web project Added the DLL location to the LibraryIO for desktop and silverlight Commented out Vts.Database as a lazyload dll because it goes into infinite loop

--- a/src/Vts.Web/Vts.Web.csproj
+++ b/src/Vts.Web/Vts.Web.csproj
@@ -52,7 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientBin\Vts.SiteVisit.xap" />
-    <Content Include="Libraries\ClientAccessPolicy.xml" />
+    <Content Include="ClientAccessPolicy.xml" />
     <Content Include="Libraries\Vts.Database.dll" />
     <Content Include="Silverlight.js" />
     <Content Include="Vts.SiteVisitTestPage.aspx" />
