--- a/src/Vts.Database.Desktop/Vts.Database.Desktop.csproj
+++ b/src/Vts.Database.Desktop/Vts.Database.Desktop.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{4FE8D1A5-E651-4264-B6A0-3D8143D7F413}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Vts.Database.Desktop</RootNamespace>
-    <AssemblyName>Vts.Database.Desktop</AssemblyName>
+    <RootNamespace>Vts.Database</RootNamespace>
+    <AssemblyName>Vts.Database</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
