--- a/src/Vts.Database/Vts.Database.csproj
+++ b/src/Vts.Database/Vts.Database.csproj
@@ -159,4 +159,8 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>IF NOT EXIST "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" mkdir "$(SolutionDir)..\build\libraries\$(ConfigurationName)\"
+copy "$(TargetDir)*.*" "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
