--- a/src/Vts.Web/Vts.Web.csproj
+++ b/src/Vts.Web/Vts.Web.csproj
@@ -92,6 +92,14 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>IF NOT EXIST "$(ProjectDir)\Libraries\" mkdir "$(ProjectDir)\Libraries\"
+IF EXIST "$(SolutionDir)..\build\libraries\$(ConfigurationName)\" copy "$(SolutionDir)..\build\libraries\$(ConfigurationName)\*.dll" "$(ProjectDir)\Libraries\" /y</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
