--- a/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
+++ b/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
@@ -53,12 +53,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <Resource Include="postprocessing_photonBiographies" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="newinfile.xml" />
-    <Resource Include="output.xml" />
-    <Resource Include="postprocessing_photonBiographies.xml" />
+    <Content Include="newdetectorinfile.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
