Modified MCPostProcessor to successfully post process a database file generated by CommandLineApplication and verified the results match those created "on-the-fly" by CommandLineApplication. Current input possibilibities limited currently.  Plan to expand input options next. Modified PhotonTerminationDatabasePostProcessing.GenerateOutput to require SimulationInput rather than Output since thats all it needed from Output.  Updated unit tests accordingly.

--- a/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
+++ b/src/Vts.MonteCarlo.PostProcessor/Vts.MonteCarlo.PostProcessor.csproj
@@ -56,6 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="newdetectorinfile.xml" />
+    <Content Include="newinfile.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
