Added PhaseFunctionType to SimulationOptions so that optionally we can choose bidirectional scattering. Added unit tests for analog processing to compare 100 photon simulation against analytic solution.

--- a/src/Vts.Test/Vts.Test.csproj
+++ b/src/Vts.Test/Vts.Test.csproj
@@ -168,6 +168,8 @@
     <Compile Include="Modeling\ForwardSolvers\NurbsGeneratorTest.cs" />
     <Compile Include="Modeling\ForwardSolvers\ValidateDiffusionReflectanceModelsTest.cs" />
     <Compile Include="Modeling\ValidateInverseSolution.cs" />
+    <Compile Include="MonteCarlo\BidirectionalScattering\AnalogBidirectionalTallyActionsTests.cs" />
+    <Compile Include="MonteCarlo\BidirectionalScattering\BidirectionalAnalyticSolutions.cs" />
     <Compile Include="MonteCarlo\DataStructures\InputTests.cs" />
     <Compile Include="MonteCarlo\Detectors\DetectorInputTests.cs" />
     <Compile Include="MonteCarlo\Detectors\OutputTests.cs" />
