Lots of unfinished work regarding Detectors/Output/Tallies/etc
--HG--
branch : dc-110309-detector_output_tally_refactoring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -232,28 +232,31 @@
     <Compile Include="MonteCarlo\DataStructures\SimulationInputExtensions.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationInputProvider.cs" />
     <Compile Include="MonteCarlo\DataStructures\SimulationOptions.cs" />
-    <Compile Include="MonteCarlo\Detectors\Detector.cs" />
+    <Compile Include="MonteCarlo\Detectors\FluenceOfRhoAndZDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\DetectorController.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCDetectorController.cs" />
     <Compile Include="MonteCarlo\Factories\AbsorptionActionFactory.cs" />
+    <Compile Include="MonteCarlo\Factories\DetectorControllerFactory.cs" />
     <Compile Include="MonteCarlo\Helpers\DetectorBinning.cs" />
-    <Compile Include="MonteCarlo\Detectors\DetectorInput.cs" />
-    <Compile Include="MonteCarlo\Detectors\pMCDetector.cs" />
-    <Compile Include="MonteCarlo\Detectors\pMCDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\ROfRhoDetectorInput.cs" />
+    <Compile Include="MonteCarlo\Detectors\pMCRofRhoDetectorInput.cs" />
     <Compile Include="MonteCarlo\Enums.cs" />
-    <Compile Include="MonteCarlo\Factories\DetectorFactory.cs" />
     <Compile Include="MonteCarlo\Factories\RandomNumberGeneratorFactory.cs" />
     <Compile Include="MonteCarlo\Factories\SourceFactory.cs" />
-    <Compile Include="MonteCarlo\Factories\TallyFactory.cs" />
+    <Compile Include="MonteCarlo\Factories\DetectorFactory.cs" />
     <Compile Include="MonteCarlo\Factories\TissueFactory.cs" />
     <Compile Include="MonteCarlo\Helpers\Optics.cs" />
-    <Compile Include="MonteCarlo\Interfaces\IpMCTally.cs" />
-    <Compile Include="MonteCarlo\Interfaces\IHistoryTally.cs" />
-    <Compile Include="MonteCarlo\Interfaces\ITally.cs" />
-    <Compile Include="MonteCarlo\PhotonHistory.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IpMCHistoryDetector.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IpMCTerminationDetector.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IHistoryDetector.cs" />
     <Compile Include="MonteCarlo\Interfaces\IDetector.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IpMCDetectorInput.cs" />
+    <Compile Include="MonteCarlo\PhotonHistory.cs" />
+    <Compile Include="MonteCarlo\Interfaces\IDetectorController.cs" />
     <Compile Include="MonteCarlo\Interfaces\IDetectorInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\ISource.cs" />
     <Compile Include="MonteCarlo\Interfaces\ISourceInput.cs" />
-    <Compile Include="MonteCarlo\Interfaces\ITerminationTally.cs" />
+    <Compile Include="MonteCarlo\Interfaces\ITerminationDetector.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissue.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissueInput.cs" />
     <Compile Include="MonteCarlo\Interfaces\ITissueRegion.cs" />
@@ -276,27 +279,27 @@
     <Compile Include="MonteCarlo\Sources\CustomPointSource.cs" />
     <Compile Include="MonteCarlo\Sources\SourceBase.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
-    <Compile Include="MonteCarlo\TallyActions\AOfRhoAndZTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ATotalTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeTally.cs" />
+    <Compile Include="MonteCarlo\TallyActions\AOfRhoAndZDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ATotalDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZAndTimeDetector.cs" />
     <Compile Include="MonteCarlo\TallyActions\HistoryTallyBase.cs" />
-    <Compile Include="MonteCarlo\TallyActions\MomentumTransferOfRhoAndZTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\pMuaMusInROfRhoAndTimeTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\pMuaMusInROfRhoTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\RDiffuseTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfAngleTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndAngleTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndOmegaTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndTimeTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfRhoTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\ROfXAndYTally.cs" />
+    <Compile Include="MonteCarlo\TallyActions\MomentumTransferOfRhoAndZDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\FluenceOfRhoAndZDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\pMCMuaMusROfRhoAndTimeDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\pMCMuaMusROfRhoDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\RDiffuseDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ROfAngleDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndAngleDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndOmegaDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ROfRhoAndTimeDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\ROfRhoDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\RofXAndYDetector.cs" />
     <Compile Include="MonteCarlo\TallyActions\TallyBase.cs" />
     <Compile Include="MonteCarlo\TallyActions\TallyExtensionMethods.cs" />
-    <Compile Include="MonteCarlo\TallyActions\TDiffuseTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\TOfAngleTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\TOfRhoAndAngleTally.cs" />
-    <Compile Include="MonteCarlo\TallyActions\TOfRhoTally.cs" />
+    <Compile Include="MonteCarlo\TallyActions\TDiffuseDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\TOfAngleDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\TOfRhoAndAngleDetector.cs" />
+    <Compile Include="MonteCarlo\TallyActions\TOfRhoDetector.cs" />
     <Compile Include="MonteCarlo\Tissues\CylinderRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\EllipsoidRegion.cs" />
     <Compile Include="MonteCarlo\Tissues\LayerRegion.cs" />
